# initbot

./: .pre-commit-config.yaml  pyproject.toml  setup.cfg
initbot/bot/: bot.py
initbot/bot/commands/: __init__.py
